Fix style of submit order button on small devices.

--- a/app/assets/stylesheets/responsive.less
+++ b/app/assets/stylesheets/responsive.less
@@ -205,7 +205,7 @@
 
         #order-purchase {
             text-align: center;
-            button[type=submit] { float: none; }
+
         }
     }
 
